# build-bitcoin-in-rust

./: Cargo.toml  README.org
good-wallet/: .gitignore  Cargo.toml  alice.priv.cbor
good-wallet/src/: tasks.rs
lib/: Cargo.toml  tx.cbor
lib/src/: crypto.rs  error.rs  lib.rs  network.rs  sha256.rs  types.rs  util.rs
lib/src/types/: block.rs  blockchain.rs  transaction.rs
miner/: Cargo.toml  alice.pub.pem  block.cbor  bob.priv.cbor
miner/src/: main.rs
node/: Cargo.toml  block.cbor  block2.cbor
node/src/: handler.rs  main.rs  util.rs
wallet/: Cargo.toml  bob.pub.pem  wallet_config.toml
wallet/src/: core.rs  main.rs  ui.rs  util.rs
